[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Messenger.gd" type="Script" id=1]
[ext_resource path="res://assets/hover3_20px.png" type="Texture" id=2]
[ext_resource path="res://assets/units/horse1.png" type="Texture" id=3]
[ext_resource path="res://assets/units/horse2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Node2D" type="Node2D"]
light_mask = 262144
z_index = 5
script = ExtResource( 1 )

[node name="PlannedPath" type="Line2D" parent="."]
visible = false
z_index = -2
points = PoolVector2Array( 51.9235, -9.17429 )
width = 4.0
default_color = Color( 0.419608, 0.419608, 0.419608, 1 )
texture_mode = 48

[node name="OrdersPath" type="Line2D" parent="."]
visible = false
z_index = -2
points = PoolVector2Array( -0.0684814, 0.115475 )
width = 4.0
default_color = Color( 0.560784, 0.560784, 0.560784, 1 )
texture_mode = 48

[node name="GoalSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
z_index = -2
texture = ExtResource( 2 )

[node name="OrdersGoalSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
z_index = -2
texture = ExtResource( 2 )

[node name="BackgroundPoly" type="Polygon2D" parent="."]
visible = false
light_mask = 262144
position = Vector2( -5.3958, 6.00347 )
scale = Vector2( 0.499276, 0.499276 )
z_index = -1
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 4.99469, 0.169639, 17.3681, 0.169013, 22.8241, -6.21036, 22.8311, -17.7743, 16.8499, -24.1708, 5.19692, -24.1733, -1.09851, -18.0458, -1.09851, -5.79067 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
frame = 1
playing = true
